# django-mock-framework

./: .pre-commit-config.yaml  README.md  pyproject.toml
mock_framework/: __init__.py  app_settings.py  apps.py  autoloader.py  global_mocker.py  middleware.py  redirect_interceptor.py  registries.py
tests/: settings.py  tests.py  views.py
